# sevra

./: CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  RELEASING.md  SECURITY.md  THIRD_PARTY_NOTICES  deny.toml  install.ps1  install.sh  llms.txt  sevra.pub  sevra.ts
.github/workflows/: audit.yml  ci.yml  release.yml  smoke.yml
src/: commands.rs  config.rs  hub.rs  main.rs  mcp.rs  output.rs  signing.rs  store.rs  update.rs
tests/: cli.rs
