[package]
name = "sevra"
version = "0.1.1"
edition = "2021"
# MSRV: pinned conservatively; the dep tree (ureq/rustls/ed25519-dalek) builds
# clean on 1.82+. Bump only with a recorded reason.
rust-version = "1.82"
license = "MIT"
repository = "https://github.com/sevrahq/sevra"
homepage = "https://www.sevrahq.com"
description = "The command line for the Sevra hub — the managed home for db.md brains. Signed, self-updating, zero-runtime static binary."
authors = ["VibeCraft Inc"]
readme = "README.md"

[[bin]]
name = "sevra"
path = "src/main.rs"

[dependencies]
# CLI parsing — derive, no_std-free, the clap the whole ecosystem uses.
clap = { version = "4", features = ["derive"] }
# HTTP with rustls (no OpenSSL, no system TLS) — a static binary that runs on
# any distro. `json` pulls serde_json wiring; we parse manually for the
# non-JSON-refusal contract, so only `tls` + `gzip` matter operationally.
ureq = { version = "2.12", default-features = false, features = ["tls", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Ed25519 signature verification for the self-update path (the pinned publisher
# key). Pure-Rust, audited, no C.
ed25519-dalek = "2"
base64 = "0.22"
# Home directory resolution for ~/.sevra (no libc dance).
home = "0.5"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
